// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component - Critical Variant Tests renders all sizes correctly 1`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-14 f-17-400 border-input"
    placeholder="xlarge size"
  />
</div>
`;

exports[`Input Component - Critical Variant Tests renders all sizes correctly 2`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-12 f-16-400 border-input"
    placeholder="large size"
  />
</div>
`;

exports[`Input Component - Critical Variant Tests renders all sizes correctly 3`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-input"
    placeholder="medium size"
  />
</div>
`;

exports[`Input Component - Critical Variant Tests renders all sizes correctly 4`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-8 f-12-400 border-input"
    placeholder="small size"
  />
</div>
`;

exports[`Input Component - Critical Variant Tests renders all sizes correctly 5`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-6 f-11-400 border-input"
    placeholder="xsmall size"
  />
</div>
`;

exports[`Input Component - Critical Variant Tests renders all sizes correctly 6`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-4 f-10-400 border-input"
    placeholder="xxsmall size"
  />
</div>
`;

exports[`Input Component - Critical Variant Tests renders all variants correctly 1`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-input"
    placeholder="default variant"
  />
</div>
`;

exports[`Input Component - Critical Variant Tests renders all variants correctly 2`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-destructive"
    placeholder="error variant"
  />
</div>
`;

exports[`Input Component - Functional Tests matches snapshot for default input 1`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-input"
    placeholder="Snapshot"
  />
</div>
`;

exports[`Input Component - Functional Tests matches snapshot for large size 1`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-12 f-16-400 border-input"
    placeholder="Large Input"
  />
</div>
`;

exports[`Input Component - Functional Tests matches snapshot for small size 1`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-8 f-12-400 border-input"
    placeholder="Small Input"
  />
</div>
`;

exports[`Input Component - Functional Tests matches snapshot when error is true 1`] = `
<div
  class="relative flex items-center"
>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-destructive"
    placeholder="Error"
  />
</div>
`;

exports[`Input Component - Functional Tests matches snapshot with icon 1`] = `
<div
  class="relative flex items-center"
>
  <div
    class="absolute left-3 w-4 h-4"
  >
    <span>
      🔍
    </span>
  </div>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-input pl-9 pr-2.5"
    placeholder="With Icon"
  />
</div>
`;

exports[`Input Component - Icon Position Tests renders with leading icon correctly 1`] = `
<div
  class="relative flex items-center"
>
  <div
    class="absolute left-3 w-4 h-4"
  >
    <span
      data-testid="icon"
    >
      🔍
    </span>
  </div>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-input pl-9 pr-2.5"
    placeholder="Leading Icon"
  />
</div>
`;

exports[`Input Component - Icon Position Tests renders with trailing icon correctly 1`] = `
<div
  class="relative flex items-center"
>
  <div
    class="absolute right-3 w-4 h-4"
  >
    <span
      data-testid="icon"
    >
      🔍
    </span>
  </div>
  <input
    class="p-3 flex w-full rounded-md border placeholder:text-gray-700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 bg-BG_WHITE [&:-webkit-autofill]:bg-BG_WHITE [&:-webkit-autofill]:shadow-[0_0_0_1000px_var(--BG_WHITE)_inset] file:border-0 file:bg-transparent file:text-sm file:font-medium outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-10 f-14-400 border-input pl-9 pr-2.5"
    placeholder="Trailing Icon"
  />
</div>
`;
